--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,7 +19,10 @@
               <ul class="dropdown-menu">
                 <li><%= link_to 'My profile', user_path(current_user) %></li>
                 <li role="separator" class="divider"></li>
+                <li><%= link_to 'Likes', likes_user_path(current_user) %></li>
+                <li role="separator" class="divider"></li>
                 <li><%= link_to 'Logout', logout_path %></li>
+                
               </ul>
             </li>
           <% else %>
