--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -9,7 +9,7 @@
       <% end %>
     </aside>
     <div class="col-xs-8">
-      <%= render 'microposts/microposts', microposts: @microposts %>
+      <%= render 'microposts/microposts', user: current_user, microposts: @microposts %>
     </div>
   </div>
 <% else %>
