--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,7 +21,7 @@
                 <li role="separator" class="divider"></li>
                 <li><%= link_to 'Likes', likes_user_path(current_user) %></li>
                 <li role="separator" class="divider"></li>
-                <li><%= link_to 'Logout', logout_path %></li>
+                <li><%= link_to 'Logout', logout_path, method: :delete %></li>
                 
               </ul>
             </li>
